Change UI of MainActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,21 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/text_app_use_case"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_use_case"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/text_no_permission"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/no_permission"
+        android:layout_marginTop="@dimen/spacing_double"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/text_app_use_case" />
 
     <Button
         android:id="@+id/button_no_permission"
@@ -35,6 +44,14 @@
         tools:visibility="visible" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/last_code"
+        app:layout_constraintBottom_toTopOf="@id/text_code"
+        app:layout_constraintEnd_toEndOf="@id/text_code"
+        app:layout_constraintStart_toStartOf="@id/text_code" />
+
+    <TextView
         android:id="@+id/text_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,7 +60,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button_no_permission"
         tools:text="123456" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
