Change SharedPreferences xml file name

--- a/app/src/main/res/xml/backup_descriptor.xml
+++ b/app/src/main/res/xml/backup_descriptor.xml
@@ -2,5 +2,5 @@
 <full-backup-content>
     <include
         domain="sharedpref"
-        path="SharedPreferenceDataSource.xml" />
+        path="SharedPreferences.xml" />
 </full-backup-content>
